# ray-tracer

./: CMakeLists.txt  README.md  color.h  hittable.h  main  main.cc  myfirstprogram  myfirstprogram.cpp  ray.h  simple  simple.cc  vec3.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
simple.dSYM/Contents/Resources/DWARF/: simple
simple.dSYM/Contents/Resources/Relocations/aarch64/: simple.yml
src/: input.cpp  input.h  main.cpp  map.cpp  map.h  player.cpp  player.h  raycaster.cpp  raycaster.h  renderer.cpp  renderer.h
